[package]
name = "spark"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2"
tokio = { version = "1.28", features = ["macros", "rt"] }
api = { path = "./api" }
common = { path = "./common" }
rpc-client = { path = "./rpc-client" }
storage = { path = "./storage" }
tx-builder = { path = "./tx-builder" }

[workspace]
members = [
    "api",
    "common",
    "devtools/tx-tests",
    "kicker",
    "query",
    "rpc-client",
    "storage",
    "tx-builder"
]
