[package]
name = "spark"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "./api" }
common = { path = "./common" }
ckb-types = "0.108"
rpc-client = { path = "./rpc-client" }
storage = { path = "./storage" }
tx-builder = { path = "./tx-builder" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt"] }
toml = "0.7"

[workspace]
members = [
    "api",
    "common",
    "devtools/tx-tests",
    "kicker",
    "query",
    "rpc-client",
    "storage",
    "tx-builder",
]
