[package]
name = "api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.18", features = ["macros","server","client"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

common = { path = "../common" }
storage = { path = "../storage" }
