[package]
name = "api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = "0.7"
jsonrpsee = { version = "0.18", features = ["macros","server","client"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

common = { path = "../common" }
storage = { path = "../storage" }
tx-builder = { path = "../tx-builder" }

[dev-dependencies]
rpc-client = { path = "../rpc-client" }

