[package]
name = "query"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.4"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = "0.11.16"
serde_json = "1.0.96"
jsonrpsee = { version = "0.18.0", features = ["full"]}
anyhow = "1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }