[package]
name = "query"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.96"
jsonrpsee = { version = "0.18.0", features = ["macros","server", "client"]}
thiserror = "1.0.40"
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
anyhow = "1.0.70"
tracing = "0.1.34"