[package]
name = "rpc-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ckb-jsonrpc-types = "0.108"
ckb-types = "0.108"
dashmap = "5.4"
jsonrpc-core = "18.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }

common = { path = "../common" }

[features]
default = ["client"]
client = ["reqwest"]
