[package]
name = "storage"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake2b-rs = "0.2"
dashmap = "5.4"
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
rocksdb = { package = "ckb-rocksdb", version = "0.19", features = ["snappy", "march-native"] }
sea-orm = { version = "0.11", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "macros"] }
sparse-merkle-tree = "0.6"
thiserror = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

common = { path = "../common" }
migration = { path = "./migration" }

smt-rocksdb-store = { git = "https://github.com/axonweb3/smt-rocksdb-store.git", rev = "9047428" }

[features]
default = []
trie = ["sparse-merkle-tree/trie"]
