[package]
name = "tx-builder"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
async-trait = "0.1"
bytes = "1.0"
ckb-crypto = "0.108"
ckb-fixed-hash-core = "0.109"
ckb-hash = "0.109"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.4"
ckb-types = "0.108"
common = { path = "../common" }
ethereum-types = "0.14"
faster-hex = "0.6"
lazy_static = "1.4"
linked-hash-map = "0.5"
log = "0.4"
molecule = "0.7"
ophelia = "0.3"
ophelia-blst = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rpc-client = { path = "../rpc-client" }
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = "1"
serde_json = "1"
storage = { path = "../storage" }
thiserror = "1.0"
tokio = "1.28"
